2009-12-17  Benjamin Otte  <otte@gnome.org>

        Reviewed by Adam Roben.

        Don't include all JSC headers everywhere
        https://bugs.webkit.org/show_bug.cgi?id=32663

        PlatformString.h included almost all of JSC via runtime/Identifier.h.
        This patch gets rid of this include by forward-declaring the required
        classes instead.
        This reduces the build size of the object files on a Gtk debug build
        by 10%. The resulting libwebkit.so gets 5% smaller.

        No new tests as it's just a build improvement.

        * platform/gtk/LocalizedStringsGtk.cpp:
        include math.h here (it used to be pulled by JSC)
        * platform/text/PlatformString.h:
        * platform/text/String.cpp:

2009-12-17  Evan Martin  <evan@chromium.org>

        Reviewed by Xan Lopez.

        Always use all WebCore include paths in GtkWebKit.

        With this patch, I can disable all optional features and still build.

        * GNUmakefile.am:

2009-12-17  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Darin Fisher.

        Added WebPageSerializer to WebKit API.

        https://bugs.webkit.org/show_bug.cgi?id=31737

        * platform/text/StringBuilder.cpp: Added methods to make StringBuilder even more useful for large scale string concatenation.
        (WebCore::StringBuilder::clear):
        (WebCore::StringBuilder::length):
        * platform/text/StringBuilder.h:

2009-12-10  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Add controls for playing html5 video.
        https://bugs.webkit.org/show_bug.cgi?id=26304

        Media controls UI, first step. This patch was written by Zan
        Dobersek. In addition I fixed the compilation errors and
        re-enabled some of the media tests involving the controls UI.

        * GNUmakefile.am:
        * css/mediaControlsGtk.css: Added.
        * platform/graphics/Image.h:
        * platform/graphics/gtk/ImageGtk.cpp: