@@ -1,3 +1,12 @@
+2009-12-17  Adam Roben  <aroben@apple.com>
+
+        Mac/Qt build fixes
+
+        * platform/graphics/mac/Canvas3DLayer.mm:
+        * platform/graphics/mac/GraphicsContext3DMac.cpp:
+        * platform/qt/Localizations.cpp:
+        Added missing #includes.
+
 2009-12-17  Benjamin Otte  <otte@gnome.org>
 
         Reviewed by Adam Roben.
